--- a/app/src/main/res/layout/activity_post_event.xml
+++ b/app/src/main/res/layout/activity_post_event.xml
@@ -16,11 +16,14 @@
 
     <Button
         android:id="@+id/button14"
-        android:layout_width="319dp"
-        android:layout_height="51dp"
+        android:layout_width="329dp"
+        android:layout_height="50dp"
         android:background="#00FFFFFF"
-        tools:layout_editor_absoluteX="34dp"
-        tools:layout_editor_absoluteY="658dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.869" />
 
     <CheckBox
         android:id="@+id/checkBox"
@@ -40,8 +43,11 @@
         android:layout_width="281dp"
         android:layout_height="38dp"
         android:background="#FFFFFF"
-        tools:layout_editor_absoluteX="60dp"
-        tools:layout_editor_absoluteY="92dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="0.118" />
 
     <EditText
         android:id="@+id/editTextTextPersonName4"
@@ -51,8 +57,12 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Description"
-        tools:layout_editor_absoluteX="58dp"
-        tools:layout_editor_absoluteY="152dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintHorizontal_bias="0.578"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="0.198" />
 
     <EditText
         android:id="@+id/editTextTime"
@@ -61,8 +71,12 @@
         android:background="#FFFFFF"
         android:ems="10"
         android:inputType="time"
-        tools:layout_editor_absoluteX="57dp"
-        tools:layout_editor_absoluteY="274dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintHorizontal_bias="0.553"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="0.359"
         tools:text="Time Slot 1" />
 
     <EditText
@@ -72,8 +86,12 @@
         android:background="#FFFFFF"
         android:ems="10"
         android:inputType="time"
-        tools:layout_editor_absoluteX="58dp"
-        tools:layout_editor_absoluteY="341dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintHorizontal_bias="0.568"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="0.442"
         tools:text="Time Slot 2" />
 
     <EditText
@@ -83,8 +101,12 @@
         android:background="#FFFFFF"
         android:ems="10"
         android:inputType="time"
-        tools:layout_editor_absoluteX="60dp"
-        tools:layout_editor_absoluteY="408dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintHorizontal_bias="0.547"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="0.529"
         tools:text="Time Slot 3" />
 
     <EditText
@@ -94,8 +116,12 @@
         android:background="#FFFFFF"
         android:ems="10"
         android:inputType="time"
-        tools:layout_editor_absoluteX="59dp"
-        tools:layout_editor_absoluteY="472dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintHorizontal_bias="0.542"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.614"
         tools:text="Time Slot 4" />
 
     <EditText
@@ -105,8 +131,12 @@
         android:background="#FFFFFF"
         android:ems="10"
         android:inputType="date"
-        tools:layout_editor_absoluteX="58dp"
-        tools:layout_editor_absoluteY="535dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.528"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="0.695"
         tools:text="Due Date" />
 
     <Button
@@ -114,8 +144,12 @@
         android:layout_width="37dp"
         android:layout_height="48dp"
         android:background="#00FFFFFF"
-        tools:layout_editor_absoluteX="7dp"
-        tools:layout_editor_absoluteY="28dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.044"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="0.042" />
 
     <TextView
         android:id="@+id/textView3"
