--- a/app/src/main/res/layout/activity_mapview.xml
+++ b/app/src/main/res/layout/activity_mapview.xml
@@ -66,25 +66,28 @@
 
     <Button
         android:id="@+id/button19"
-        android:layout_width="172dp"
-        android:layout_height="51dp"
+        android:layout_width="220dp"
+        android:layout_height="118dp"
         android:background="#00FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/imageView5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.877"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/imageView5"
         app:layout_constraintTop_toTopOf="@+id/imageView5"
-        app:layout_constraintVertical_bias="0.093" />
+        app:layout_constraintVertical_bias="0.0" />
 
-    <com.google.android.gms.maps.MapView
+    <com.mapbox.maps.MapView
         android:id="@+id/mapView"
-        android:layout_width="346dp"
-        android:layout_height="605dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-        app:layout_constraintEnd_toEndOf="@+id/imageView5"
-        app:layout_constraintHorizontal_bias="0.489"
+        android:layout_width="318dp"
+        android:layout_height="486dp"
+        app:layout_constraintBottom_toTopOf="@+id/button18"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.423"
         app:layout_constraintStart_toStartOf="@+id/imageView5"
-        app:layout_constraintTop_toTopOf="@+id/imageView5"
-        app:layout_constraintVertical_bias="0.599" />
+        app:layout_constraintTop_toBottomOf="@+id/button19"
+        app:layout_constraintVertical_bias="1.0"
+        app:mapbox_cameraTargetLat="34.0224"
+        app:mapbox_cameraTargetLng="-118.2851"
+        app:mapbox_cameraZoom="14.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
