--- a/app/src/main/res/layout/activity_post_event.xml
+++ b/app/src/main/res/layout/activity_post_event.xml
@@ -56,7 +56,7 @@
         android:background="#FFFFFF"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Description"
+        android:hint="Description"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
         app:layout_constraintHorizontal_bias="0.578"
@@ -64,13 +64,12 @@
         app:layout_constraintTop_toTopOf="@+id/imageView6"
         app:layout_constraintVertical_bias="0.198" />
 
-    <EditText
+    <Button
         android:id="@+id/editTextTime"
         android:layout_width="290dp"
         android:layout_height="45dp"
         android:background="#FFFFFF"
         android:ems="10"
-        android:inputType="time"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
         app:layout_constraintHorizontal_bias="0.553"
@@ -79,13 +78,12 @@
         app:layout_constraintVertical_bias="0.359"
         tools:text="Time Slot 1" />
 
-    <EditText
+    <Button
         android:id="@+id/editTextTime2"
         android:layout_width="291dp"
         android:layout_height="41dp"
         android:background="#FFFFFF"
         android:ems="10"
-        android:inputType="time"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
         app:layout_constraintHorizontal_bias="0.568"
@@ -94,13 +92,12 @@
         app:layout_constraintVertical_bias="0.442"
         tools:text="Time Slot 2" />
 
-    <EditText
+    <Button
         android:id="@+id/editTextTime3"
         android:layout_width="287dp"
         android:layout_height="40dp"
         android:background="#FFFFFF"
         android:ems="10"
-        android:inputType="time"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
         app:layout_constraintHorizontal_bias="0.547"
@@ -109,13 +106,12 @@
         app:layout_constraintVertical_bias="0.529"
         tools:text="Time Slot 3" />
 
-    <EditText
+    <Button
         android:id="@+id/editTextTime4"
         android:layout_width="286dp"
         android:layout_height="39dp"
         android:background="#FFFFFF"
         android:ems="10"
-        android:inputType="time"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
         app:layout_constraintHorizontal_bias="0.542"
@@ -124,13 +120,12 @@
         app:layout_constraintVertical_bias="0.614"
         tools:text="Time Slot 4" />
 
-    <EditText
+    <Button
         android:id="@+id/editTextDate"
         android:layout_width="289dp"
         android:layout_height="43dp"
         android:background="#FFFFFF"
         android:ems="10"
-        android:inputType="date"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.528"
