--- a/app/src/main/res/layout/activity_discover_list.xml
+++ b/app/src/main/res/layout/activity_discover_list.xml
@@ -21,21 +21,21 @@
         android:background="#00FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/imageView7"
         app:layout_constraintEnd_toEndOf="@+id/imageView7"
-        app:layout_constraintHorizontal_bias="0.118"
+        app:layout_constraintHorizontal_bias="0.155"
         app:layout_constraintStart_toStartOf="@+id/imageView7"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.096" />
+        app:layout_constraintVertical_bias="0.095" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleViewer"
-        android:layout_width="394dp"
-        android:layout_height="166dp"
+        android:layout_width="387dp"
+        android:layout_height="484dp"
+        android:background="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/imageView7"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/imageView7"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.836">
+        app:layout_constraintVertical_bias="0.441">
 
     </androidx.recyclerview.widget.RecyclerView>
 
