--- a/app/src/main/res/layout/activity_my_pending_events.xml
+++ b/app/src/main/res/layout/activity_my_pending_events.xml
@@ -16,6 +16,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/pendingevents" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycleViewer"
+        android:layout_width="387dp"
+        android:layout_height="484dp"
+        android:background="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/imageView9"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.441">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
     <Button
         android:id="@+id/button11"
         android:layout_width="54dp"
