--- a/app/src/main/res/layout/activity_pending_invites.xml
+++ b/app/src/main/res/layout/activity_pending_invites.xml
@@ -18,6 +18,19 @@
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/pendinginvitations" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycleViewer"
+        android:layout_width="387dp"
+        android:layout_height="484dp"
+        android:background="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/imageView11"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.441">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
     <Button
         android:id="@+id/button26"
         android:layout_width="167dp"
