--- a/app/src/main/res/layout/discover_event.xml
+++ b/app/src/main/res/layout/discover_event.xml
@@ -31,6 +31,7 @@
                 android:layout_width="0dp"
                 android:layout_height="54dp"
                 android:layout_weight="1"
+                android:background="#ED9E98"
                 android:text="See Event"
                 tools:layout_editor_absoluteX="414dp" />
         </LinearLayout>
