--- a/app/src/main/res/layout/activity_event_info.xml
+++ b/app/src/main/res/layout/activity_event_info.xml
@@ -71,6 +71,7 @@
         android:layout_width="337dp"
         android:layout_height="48dp"
         android:background="#00FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/imageView13"
         app:layout_constraintStart_toStartOf="@+id/imageView13"
