--- a/app/src/main/res/layout/activity_event_info.xml
+++ b/app/src/main/res/layout/activity_event_info.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".event_info">
+    tools:context=".event_info"
+    android:id="@+id/constraintLayout1">
 
     <ImageView
         android:id="@+id/imageView13"
@@ -66,11 +67,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.346" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button29"
         android:layout_width="337dp"
         android:layout_height="48dp"
-        android:background="#00FFFFFF"
+        android:background="#ED9E98"
+        android:textColor="@color/white"
+        android:text="Join"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/imageView13"
