added spinner content

--- a/app/src/main/res/layout/activity_post_event.xml
+++ b/app/src/main/res/layout/activity_post_event.xml
@@ -19,6 +19,7 @@
         android:layout_width="329dp"
         android:layout_height="50dp"
         android:background="#00FFFFFF"
+        android:backgroundTint="#ED9E98"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
         app:layout_constraintStart_toStartOf="@+id/imageView6"
@@ -69,6 +70,7 @@
         android:layout_width="290dp"
         android:layout_height="45dp"
         android:background="#FFFFFF"
+        android:backgroundTint="#C83939"
         android:ems="10"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
